# ai-algorithms

./: .env.example  .gitignore  README.md  pyproject.toml  setup_env_uv.ps1
labs/: 01_openai_and_local_ollama.ipynb  02A_agentic_workflows_ollama.ipynb  02B_agentic_workflows_openai.ipynb
