[project]
name = "ai-algorithms-labs"
version = "0.1.0"
description = "Jupyter labs for LLM engineering and agentic AI fundamentals"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel==6.29.5",
    "jupyterlab==4.4.1",
    "notebook==7.4.1",
    "openai==1.68.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[tool.uv]
package = false
